--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -13,18 +13,18 @@ TRAIN_MODE: 'default'
 NUM_CLASSES: 1
 MODEL_DEPTH: 4
 INIT_LR: 0.0001
-NUM_EPOCHS: 200
+NUM_EPOCHS: 1
 BATCH_SIZE: 16
 THRESHOLD: 0.5
+NUM_WORKERS: 1
 
 # DATASET PARAMS
 TEST_SPLIT:  0.15
 SEED: 13
-IM_PER_CAT: 1703
 
 # PATHS
-FULL_RDR_PNG: 'C:/Users/Oleksii/Desktop/pHD/DataStorage/MRO/RDR/png/x01'
-DATASET_PATH: 'C:/Users/Oleksii/Desktop/pHD/DataStorage/SemSeg/Scarp'
+# FULL_RDR_PNG: 'D:/DataStorage/MRO/RDR/png/x01'
+DATASET_PATH: 'D:/DataStorage/SemSeg/train'
 OUTPUT_PATH: 'saved'
 
 # DDP paramenets
