--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -8,8 +8,7 @@ INPUT_IMAGE_SIZE: 512
 NUM_CHANNELS: 1
 
 # MODEL PARAMETERS
-MODEL: 'UNet' # Unet | DenseNet | AuxNet:encoder | AuxNet:decoder | AuxNet:dense
-TRAIN_MODE: 'default'
+MODEL: 'UNet'
 NUM_CLASSES: 1
 MODEL_DEPTH: 4
 INIT_LR: 0.0001
@@ -23,7 +22,6 @@ TEST_SPLIT:  0.1
 SEED: 42
 
 # PATHS
-# FULL_RDR_PNG: 'D:/DataStorage/MRO/RDR/png/x01'
 DATASET_PATH: 'D:/DataStorage/SemSeg/train'
 OUTPUT_PATH: 'saved'
 
