--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,19 +1,22 @@
 ---
-# RUN
-RUN_NAME: 'UNet_BCL'
+# RUN PARAMETERS
+MODEL: 'UNet'
+DSET: 'scarp'
 
-# Main configuration file
+# PATHS
+DATASET_PATH: 'D:/DataStorage/SemSeg/train'
+OUTPUT_PATH: 'saved'
+
 # IMAGE PARAMETERS
 INPUT_IMAGE_SIZE: 512
 NUM_CHANNELS: 1
 
 # MODEL PARAMETERS
-MODEL: 'UNet'
-DSET: 'scarp'
-LOSS: 'BinDICE' # BinC1 | SdmDiCE | WeightedBCL | SdmC1 | SdmC2 | SdmC3
+LOSS: 'BinDICE' # BinDICE | BinC1 | SdmDICE | WeightedBCL | SdmC1 | SdmC2 | SdmC3
 NUM_CLASSES: 1
-MODEL_DEPTH: 4
 INIT_LR: 0.0001
+L2_DECAY: 0.00001
+DROPOUT: 0.1
 NUM_EPOCHS: 150
 BATCH_SIZE: 16
 THRESHOLD: 0.5
@@ -22,10 +25,6 @@ NUM_WORKERS: 1
 # DATASET PARAMS
 TEST_SPLIT:  0.1
 SEED: 42
-
-# PATHS
-DATASET_PATH: 'D:/DataStorage/SemSeg/train'
-OUTPUT_PATH: 'saved'
 
 # DDP paramenets
 NUM_GPU: 1
