--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -12,7 +12,7 @@ INPUT_IMAGE_SIZE: 512
 NUM_CHANNELS: 1
 
 # MODEL PARAMETERS
-LOSS: 'BinDICE' # BinDICE | BinC1 | SdmDICE | WeightedBCL | SdmC1 | SdmC2 | SdmC3
+LOSS: 'sdm_DICE' # bin_DICE | bin_BCE | bin_WeightedBCE | bin_C1 | sdm_BCE | sdm_DICE | sdm_C1 | sdm_C2 | sdm_C3
 NUM_CLASSES: 1
 INIT_LR: 0.0001
 L2_DECAY: 0.00001
