--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -11,8 +11,11 @@ OUTPUT_PATH: 'saved'
 INPUT_IMAGE_SIZE: 512
 NUM_CHANNELS: 1
 
+# SDM
+SDM_KERNEL: 7
+
 # MODEL PARAMETERS
-LOSS: 'sdm_DICE' # bin_DICE | bin_BCE | bin_WeightedBCE | bin_C1 | sdm_BCE | sdm_DICE | sdm_C1 | sdm_C2 | sdm_C3
+LOSS: 'bin_WeightedBCE' # bin_DICE | bin_BCE | bin_WeightedBCE | bin_C1 | sdm_MAE | sdm_DICE | sdm_C1 |
 NUM_CLASSES: 1
 INIT_LR: 0.0001
 L2_DECAY: 0.00001
